syntax = "proto3";
option go_package = "api/pb";

import "google/protobuf/timestamp.proto";

message Profile {
    uint64 id = 1;
    string username = 2;
    string description = 3;
    int32 number_of_friends = 4;
}

message Biography {
    string first_name = 1;
    string second_name = 2;
    google.protobuf.Timestamp birthday = 3;
}