syntax = "proto3";
option go_package = "api/pb";

import "request.proto";
import "response.proto";

service ProfileService {
    rpc Create(CreateRequest) returns (CreateResponse) {}
    rpc GetById(GetByIdRequest) returns (GetByIdResponse) {}
}

