syntax = "proto3";
package profilepb;
option go_package = "api/pb";

import "profile_model.proto";



message CreateProfileResponse {
    Profile profile = 1; 
}


message GetProfileResponse {
    Profile profile = 1; 
    repeated Avatar avatars = 2;
    Avatar selected_avatar = 3;
}  


message DeleteProfileResponse {
    //only error
}



message AddProfileAvatarResponse {
    Avatar avatar = 1;
}


message DeleteProfileAvatarResponse {
    // only error 
}